# spotlist

./: build.sh  package.json  render.yaml  start-services.js
backend/: .env  package-lock.json  package.json  server.js
backend/config/: db.js
backend/models/: Playlist.js  User.js
backend/routes/: CredLoginRoutes.js  PlaylistFunctionsRoutes.js  aiRoutes.js  dbUserFunctionsRoutes.js  fetchUserRoute.js  trackRoutes.js
backend/utils/: PlaylistFunctions.js  TokenFunctions.js  aiOperations.js  dbPlaylistOperations.js  dbUserOperations.js  fetchSavedTracks.js  fetchTrack.js  fetchUserProfile.js
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/FE_utils/: useSocket.js
frontend/src/components/: Footer.jsx  Intro.jsx  MakePlaylist.jsx  Navbar.jsx  SongsCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: axios.js
frontend/src/pages/: Callback.jsx  HomePage.jsx  Songswipe.jsx
python/py_ML/: features.npy  preprocess_dataset.py  scaler.pkl  track_ids.npy
python/py_backend/: build.sh  ml_ws_server.py  pyproject.toml  render.yaml  requirements.txt
